[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oscparser"
version = "1.0.0"
description = "Library for parsing and building Open Sound Control (OSC) messages and bundles."
readme = "README.md"
requires-python = ">=3.13, <3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Morph Tollon", email = "code@morphtollon.co.uk"},
    { name = "Ripple", email = "github@ripple.contact"}
]
maintainers = [
    { name = "Morph Tollon", email = "code@morphtollon.co.uk"},
    { name = "Ripple", email = "github@ripple.contact"}
]
keywords = ["osc", "sound", "midi", "music"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://gitlab.com/Theatre-Tools/python-osc-parser"
Homepage = "https://gitlab.com/Theatre-Tools/python-osc-parser"
Issues = "https://gitlab.com/Theatre-Tools/python-osc-parser/-/issues"

[dependency-groups]
dev = [
    "pyright[nodejs] (>=1.1.407,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "lefthook (>=2.0.12,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "twine (>=6.2.0,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "W1", "W2", "F", "RUF", "I"]

[tool.ruff]
line-length = 127

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["tests", ".venv", "test_*"]

[tool.poetry.dependencies]
pydantic = "^2.12.5"
twine = "^6.2.0"
